--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,8 @@
 requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
 
 [project]
-name = "sentinel_tiles"
-version = "1.1.0"
+name = "sentinel-tiles"
+version = "1.1.1"
 description = "generates raster geometries for the Sentinel version of 100km Military Grid Reference System (MGRS) tiles"
 readme = "README.md"
 authors = [
@@ -34,7 +34,7 @@ dev = [
 ]
 
 [tool.setuptools.package-data]
-sentinel_tiles = ["*.txt", "*.geojson"]
+sentinel_tiles = ["*.geojson"]
 
 [tool.pytest.ini_options]
 filterwarnings = [
