--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "rasters>=1.3.0",
+    "rasters>=1.16.1",
     "geopandas",
     "mgrs",
     "numpy",
@@ -29,8 +29,12 @@ requires-python = ">=3.10"
 
 [project.optional-dependencies]
 dev = [
+    "build",
     "pytest>=6.0",
-    "pytest-cov",  # For test coverage reports (optional)
+    "pytest-cov",
+    "jupyter",
+    "pytest",
+    "twine"
 ]
 
 [tool.setuptools.package-data]
